<resources>
    <string name="app_name">Ven-U</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event">Event</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_timeline">Timeline</string>
    <string name="edit">edit</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="biography">Biography</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="account_exists"><u>Already have an account? Log in here.</u></string>
    <string name="account_exists_false"><u>Don\'t have an account? Register here.</u></string>
    <string name="addEvent">Create New Event</string>
    <string name="addEventButton">Create New Event</string>
    <string name="findEvent">Find An Event</string>
    <string name="description">Description</string>
    <string name="eventName">Event Name</string>
    <string name="eventType">Event Type</string>
    <string name="publicEvent">Public</string>
    <string name="protectedEvent">Protected</string>
    <string name="privateEvent">Private</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="change_biography">Change Biography</string>
    <string name="change_name">Change Name</string>
    <string name="view_events">View Events</string>
    <string name="directions">Directions</string>
    <string name="show">Show</string>

    <string-array name="eventType">
        <item>private</item>
        <item>protected</item>
        <item>public</item>
    </string-array>
</resources>
