<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_centerHorizontal="true"
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<EditText
    android:id="@+id/edit_change_bio"
    android:hint="@string/biography"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:importantForAutofill="no"
    android:inputType="textMultiLine"
    android:ems="10"
    android:layout_marginTop="10dp"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:maxLines="6"
    android:minLines="4"
    android:background="@drawable/border"
    android:padding="10dp"
    android:textSize="14sp"
    android:lines="5"
    />

    <Button
        android:id="@+id/button_confirm_biochange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_change_bio" />

    <Button
        android:id="@+id/button_cancel_biochange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_change_bio" />

</androidx.constraintlayout.widget.ConstraintLayout>
